# succinct-expl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: SP1_REFERENCE.md  sequence-diagrams.md
usda-common/: Cargo.toml
usda-common/migrations/: 20231223_create_das_verifications.down.sql  20231223_create_das_verifications.sql
usda-common/src/: avail.rs  finality.rs  lib.rs  validation.rs
usda-common/src/das/: light_client.rs  mod.rs
usda-core/: Cargo.toml
usda-core/migrations/: 20231221_allow_null_from_addr.sql  20231223_add_timestamps.sql  20241221000001_initial_schema.sql  20241222_batch_processing.sql  20241223_proof_tracking.sql  20241224_batch_transactions.sql
usda-core/src/: batch.rs  error.rs  lib.rs  main.rs  state.rs  websocket.rs
usda-core/src/api/: account.rs  mod.rs  query.rs  transaction.rs  websocket.rs
usda-core/src/tests/: account_tests.rs  mint_tests.rs  mod.rs  nonce_tests.rs  transaction_tests.rs  util.rs  websocket_tests.rs
usda-core/tests/: benchmark_test.rs  integration.rs  integration_test.rs
usda-program/: Cargo.toml
usda-program/src/: main.rs
usda-script/: Cargo.toml  build.rs
usda-script/src/: lib.rs  validation.rs
