[package]
name = "usda-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0"
sha2 = "0.10"
thiserror = "1.0"
hex = "0.4"
uuid = { version = "1.4", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
avail-subxt = { git = "https://github.com/availproject/avail-subxt.git", branch = "main" }
subxt = "0.31.0"
subxt-signer = "0.31.0"
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
