[package]
name = "usda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
usda-common = { path = "../usda-common" }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = "2.0"
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
