[package]
name = "usda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
usda-common = { path = "../usda-common" }
uuid = { version = "1.0", features = ["serde", "v4"] }
hex = "0.4"
hyper = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
ed25519-dalek = "2.0"
rand = "0.8"
