[package]
name = "usda-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "usda"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "3.0.0-rc4"
sp1-helper = "3.0.0-rc4"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_arrays = "0.1"
bincode = "1.3"
hex = { workspace = true }
ed25519-dalek = "2.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[build-dependencies]
sp1-helper = "3.0.0-rc4"
